--- a/react-multiples/package.json
+++ b/react-multiples/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@henriquekleinberger/react-single",
+  "name": "@henriquekleinberger/react-multiples",
   "scripts": {
-    "start": "webpack-dev-server --port 8500",
+    "start": "webpack-dev-server",
     "build": "webpack --mode=production",
     "analyze": "webpack --mode=production --env.analyze=true",
     "lint": "eslint src --ext js",
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.2.0"
   }
 }
