--- a/react-header/package.json
+++ b/react-header/package.json
@@ -12,7 +12,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged && concurrently npm:test npm:lint"
+      "pre-commit": "pretty-quick --staged && concurrently npm:test"
     }
   },
   "devDependencies": {
