--- a/single-spa/package.json
+++ b/single-spa/package.json
@@ -9,7 +9,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged && concurrently npm:test npm:lint"
+      "pre-commit": "pretty-quick --staged && concurrently npm:test"
     }
   },
   "devDependencies": {
